[tool.poetry]
name = "evrim-dash-mvp"
version = "0.1.0"
description = "Streamlit app for Evrim REST API"
authors = ["csmizzle <chrissmith700@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
requests = "^2.32.3"
polling2 = "^0.5.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
